--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -29,6 +29,10 @@
             "error",
             "windows"
         ],
+        "no-console": [
+            "error",
+            "off"
+        ],
         "quotes": [
             "error",
             "single"
@@ -40,6 +44,15 @@
         "extends": [
             "airbnb-bundle"
             
+        ],
+
+        "no-restricted-syntax": [
+            "error",
+            {
+                "selector": "CallExpression[callee.object.name='console'][callee.property.name=/^(log|warn|error|info|trace)$/]",
+                "message": "Unexpected property on console object was called"
+            }
         ]
     }
+    
 }
