--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -31,7 +31,7 @@
         ],
         "no-console": [
             "error",
-            "off"
+            "offgi"
         ],
         "quotes": [
             "error",
