--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -29,8 +29,9 @@
         ],
 
         
-            "no-unused-vars": [
-                "error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false}],
+        "no-unused-vars": [
+            0
+        ],
         
         "linebreak-style": [
             "error",
@@ -53,13 +54,15 @@
             
         ],
 
-        "no-restricted-syntax": [
-            "error",
-            {
-                "selector": "CallExpression[callee.object.name='console'][callee.property.name=/^(log|warn|error|info|trace)$/]",
-                "message": "Unexpected property on console object was called"
+        
+            "rules": {
+                "no-restricted-syntax": [
+                    "error", 
+                    "ForInStatement", 
+                    "LabeledStatement",
+                     "WithStatement"
+                    ]
             }
-        ]
-    }
+        }
     
 }
